--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/postgres": "^0.5.1",
     "geist": "^1.0.0",
     "mysql2": "^3.6.5",
     "next": "^14.0.3",
