--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.19.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -17,6 +18,7 @@
     "@vercel/postgres": "^0.5.1",
     "geist": "^1.0.0",
     "next": "^14.0.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
