--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-uuid": "^2.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
