--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "geist": "^1.0.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -24,6 +25,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
